<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_16"
    >

    <TextView
        android:id="@+id/header_tv"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_100"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/email_tv"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_et"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:autofillHints="emailAddress"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <TextView
        android:id="@+id/password_tv"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_et"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:autofillHints="password"
        android:hint="@string/password_enter"
        android:inputType="textPassword"
        android:maxLines="1" />

    <LinearLayout
        android:id="@+id/sign_up_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/password_repeat_tv"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/password_repeat" />

        <EditText
            android:id="@+id/password_repeat_et"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:autofillHints="password"
            android:hint="@string/password_reenter"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/sign_up_button"
            style="@style/ButtonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_repeat_et" />

        <LinearLayout
            android:id="@+id/sign_up_text_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/account_already_tv"
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_already" />

            <TextView
                android:id="@+id/sign_in_link"
                style="@style/LinkText"
                android:layout_marginStart="@dimen/margin_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/sign_in_button"
            style="@style/ButtonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/sign_in" />

        <LinearLayout
            android:id="@+id/sign_in_text_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/not_have_account_tv"
                style="@style/SmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_dont_have" />

            <TextView
                android:id="@+id/sign_up_link"
                style="@style/LinkText"
                android:layout_marginStart="@dimen/margin_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up" />
        </LinearLayout>


        <TextView
            android:id="@+id/forgot_password_link"
            style="@style/LinkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/password_forgot" />
    </LinearLayout>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_32"
        android:background="@color/another_gray"
        app:layout_constraintBottom_toTopOf="@+id/vk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inner_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_32"
        android:orientation="horizontal">

        <ImageView
            android:layout_weight="1"
            android:id="@+id/vk_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button2"
            app:layout_constraintEnd_toStartOf="@+id/ok_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <ImageView
            android:layout_weight="1"
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button1"
            app:layout_constraintBottom_toBottomOf="@+id/vk_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/vk_button"
            app:layout_constraintTop_toTopOf="@+id/vk_button" />
    </LinearLayout>

</LinearLayout>